sanders: MotoActions: this is Derped MotoQuest
Signed-off-by: Mayur <ultramayur123@gmail.com>

--- a/MotoActions/res/values/strings.xml
+++ b/MotoActions/res/values/strings.xml
@@ -19,7 +19,7 @@
     <!-- Title and summary -->
     <string name="moto_actions_title">Derped MotoQuest</string>
     <string name="moto_actions_summary">The Quest full of Fest..</string>
-    <string name="actions_header_title">Make your life easy with MotoActions</string>
+    <string name="actions_header_title">Make your life easy with Derped MotoQuest</string>
 
     <!-- Device gestures -->
     <string name="device_gestures_title">Device gestures</string>
