--- a/MotoActions/res/values/strings.xml
+++ b/MotoActions/res/values/strings.xml
@@ -18,23 +18,23 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Title and summary -->
     <string name="moto_actions_title">Derped MotoQuest</string>
-    <string name="moto_actions_summary">The Quest full of Fest..</string>
     <string name="actions_header_title">Make your life easy with Derped MotoQuest</string>
+    <string name="moto_actions_summary">Ambient display\, display calibration\, gestures\, dirac</string>
 
     <!-- Device gestures -->
     <string name="device_gestures_title">Device gestures</string>
-    <string name="device_gesturess_summary">Manage device gestures</string>
+    <string name="device_gesturess_summary">Double twist\, chop chop\, wave to silence</string>
     <string name="gesture_header_summery">Control your phone with simple gesture</string>
 
     <!-- Ambient display gestures -->
-    <string name="ambient_display_manage_summary">Manage ambient display gestures</string>
+    <string name="ambient_display_manage_summary">Pick up\, hand wave</string>
     <string name="doze_header_summery">Never miss a notification even if your screen is off</string>
 
     <!-- Fingerprint gestures -->
     <string name="fingerprint_gestures_title">Fingerprint gestures</string>
-    <string name="fingerprint_gestures_summary">Use fingerprint gestures</string>
+    <string name="fingerprint_gestures_summary">Single\, double\, long tap and left\, right swipe</string>
     <string name="fingerprint_header_summery">Use your finger to do things you never imagined</string>
-    <string name="fingerprint_gestures_manage_summary">Manage fingerprint gestures</string>
+    <string name="fingerprint_gestures_manage_summary">Single\, double\, long tap and left\, right swipe</string>
     <string name="fingerprint_actions_screenon">Actions with screen on</string>
     <string name="fingerprint_tap_title">Single tap</string>
     <string name="fingerprint_tap_dlg_title">Select action for single tap</string>
@@ -104,7 +104,7 @@
 
     <string name="sound_title">Dirac</string>
     <string name="dirac_title">Dirac sound enhancer</string>
-    <string name="dirac_summary">Optimize audio quality</string>
+    <string name="dirac_summary">Headphone type\, preset</string>
     <string name="dirac_header_summery">Enhance your music experience like never before</string>
     <string name="dirac_headset_title">Choose headphone type</string>
     <string name="dirac_preset_title">Choose a preset</string>
@@ -154,7 +154,7 @@
 
     <!-- Kcal -->
     <string name="kcal_title">Display Calibration</string>
-    <string name="kcal_summary">Display color calibration</string>
+    <string name="kcal_summary">Kcal preset\, color settings\, greyscale</string>
     <string name="kcal_header_summery">Calibrate your display to the color that suits you best</string>
     <string name="kcal_enabled_title">Enable KCAL</string>
     <string name="kcal_enabled_summary">Turn on display calibration</string>
